--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 REACT_APP_LOCATIONIQ_API_KEY=pk.0d5c1a2322b1f200e9d9d8cc0982e221
-REACT_APP_WEATHER_API_KEY=7bd1981fa5ea45e78a232b63819ae9ad
-REACT_APP_MOVIES_API_KEY=75335d9b7b4a1bed5f2a497e8e04e403
-BACKEND_URL=https://city-explorer-backend-eslam.herokuapp.com
+; BACKEND_URL=https://city-explorer-backend-eslam.herokuapp.com
+BACKEND_URL=http://localhost:8000
 
