--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_LOCATIONIQ_API_KEY=pk.0d5c1a2322b1f200e9d9d8cc0982e221
 ; BACKEND_URL=https://city-explorer-backend-eslam.herokuapp.com
-BACKEND_URL=http://localhost:8000
+REACT_APP_BACKEND_URL=localhost:8000
+
 
